# a_pointgreycapture_cpp

./: CMakeLists.txt  drivePointgrey.sln  readme.md
CommonPropertySheets/: protobuf.props  protobufDebug.props  zmqDebug.props  zmqRelease.props
cmake/: FindFlyCapture.cmake
src/: PointGreyCam.cpp  PointGreyCam.h  imagepack.pb.cc  imagepack.pb.h  imagepack.proto  imagepack_pb2.py  stereocaptureServermain.cpp  stereocapturemain.cpp  testclient.py  testclient_Stream.py
vs_captureServer/: ReadMe.txt  stdafx.cpp  vs_captureServer.vcxproj  vs_captureServer.vcxproj.filters
vs_stereoCapture/: ReadMe.txt  stdafx.cpp  vs_stereoCapture.vcxproj  vs_stereoCapture.vcxproj.filters
x64/Release/: vs_captureServer.bat  vs_stereoCapture.bat
